# cel-cxx

./: .gitignore  CHANGELOG.md  Cargo.toml  DOCS.md  Makefile  README.md  build.rs
crates/cel-build-utils/: .gitignore  Cargo.toml  README.md
crates/cel-build-utils/build-android/: .bazelrc  BUILD.bazel  MODULE.bazel
crates/cel-build-utils/build-apple/: .bazelrc  BUILD.bazel  MODULE.bazel
crates/cel-build-utils/build-linux/: .bazelrc  BUILD.bazel  MODULE.bazel
crates/cel-build-utils/build-windows/: .bazelrc  BUILD.bazel  MODULE.bazel
crates/cel-build-utils/cel/: .bazelrc  BUILD.bazel  MODULE.bazel  android_conditional.bzl
crates/cel-build-utils/cel-windows/: .bazelrc  BUILD.bazel  MODULE.bazel  antlr4_remove_version_file.patch  build.sh  fix_msvc.patch
crates/cel-build-utils/src/: ar.rs  bazel.rs  lib.rs
crates/cel-cxx-ffi/: Cargo.toml  README.md  build.rs
crates/cel-cxx-ffi/include/: absl.h  ast.h  checker.h  compiler.h  constant.h  cxx.h  decl.h  expr.h  extensions.h  optional.h  parser.h  protobuf.h  runtime.h  source.h  type_provider.h  types.h  values.h
crates/cel-cxx-ffi/include/common/: ast.h  decl.h  types.h  values.h
crates/cel-cxx-ffi/src/: absl.cc  absl.rs  checker.cc  checker.rs  compiler.rs  cxx.rs  extensions.cc  extensions.rs  lib.rs  optional.cc  parser.cc  parser.rs  protobuf.rs  runtime.cc  runtime.rs
crates/cel-cxx-ffi/src/common/: ast.rs  constant.rs  decl.rs  expr.rs  kind.rs  mod.rs  source.rs  type_provider.cc  type_provider.rs  types.rs  values.cc  values.rs
crates/cel-cxx-macros/: Cargo.toml  README.md
crates/cel-cxx-macros/src/: lib.rs  opaque.rs  prost_value.rs  protobuf_legacy_value.rs  protobuf_value.rs  symbol.rs
docs/: 01-basic-concepts.md  02-standard-library.md  03-extensions.md  03-optional.md  04-extensions.md  04-optional-types.md  README.md  advanced-features.md  function-registration.md  protobuf-derive.md  protobuf-support-design.md
docs-cn/: 04-extensions.md  README.md  advanced-features.md  function-registration.md
docs-cn/cel-reference/: 01-basic-concepts.md  02-standard-library.md  03-optional.md  README.md
docs-cn/cel-reference/extensions/: bindings.md  encoders.md  lists.md  math.md  re.md  regex.md  sets.md
docs-cn/extensions/: comprehensions.md  proto.md  strings.md
docs/cel-reference/: 01-basic-concepts.md  02-standard-library.md  04-extensions.md  README.md
docs/cel-reference/extensions/: comprehensions.md  encoders.md  lists.md  math.md  proto.md  re.md  regex.md  sets.md  strings.md
docs/extensions/: bindings.md  encoders.md  lists.md  math.md  proto.md  re.md  regex.md  sets.md  strings.md
examples/: async-std.rs  basic.rs  comprehensive.rs  ext-re.rs  extensions-bindings.rs  extensions-comprehensions.rs  extensions-encoders.rs  extensions-lists.rs  extensions-math.rs  extensions-regex.rs  extensions-sets.rs  extensions-strings.rs  helloworld.rs  macros.rs  optional.rs  protobuf-advanced.rs  protobuf-legacy-derive.rs  protobuf-prost-derive.rs  protobuf.rs  standard-library.rs  tokio.rs
examples-async/: Cargo.toml  README.md
examples-async/src/: async-std.rs  smol.rs
examples/async/: async-std.rs  smol.rs  tokio.rs
scripts/: docs.sh  publish.sh  test_docs_only.sh  update_compile_commands.sh
src/: activation.rs  env.rs  error.rs  ffi.rs  kind.rs  lib.rs  marker.rs  maybe_future.rs  program.rs
src/async/: abort.rs  mod.rs
src/env/: inner.rs  mod.rs
src/ffi/: activation.rs  error.rs  types.rs  values.rs
src/function/: bindings.rs  decl.rs  mod.rs  overload.rs  registry.rs
src/macros/: expander.rs  expr.rs  factory.rs  mod.rs
src/program/: eval_dispatch.rs  inner.rs  mod.rs
src/types/: convert.rs  display.rs  mod.rs
src/values/: display.rs  impls.rs  mod.rs  opaque.rs  optional.rs  traits.rs
src/values/impls/: bool.rs  bytes.rs  double.rs  duration.rs  error.rs  int.rs  list.rs  map.rs  mod.rs  null.rs  opaque.rs  optional.rs  string.rs  struct.rs  timestamp.rs  type.rs  uint.rs  unknown.rs
src/variable/: bindings.rs  mod.rs  provider.rs  registry.rs
tests/: async.rs  basic.rs  collection.rs  extensions-bindings.rs  extensions-comprehensions.rs  extensions-encoders.rs  extensions-lists.rs  extensions-math.rs  extensions-re.rs  extensions-regex.rs  extensions-sets.rs  extensions-strings.rs  macros.rs  optional.rs  overload.rs  prost_derive.rs  protobuf.rs  protobuf_legacy_derive.rs  standard-library.rs  sync.rs  tokio.rs
tests/fixtures/: test.proto
