[package]
name = "cel-build-utils"
description = "Build utils for google/cel-cpp"
categories = ["build-tools", "development-tools"]
documentation = "https://docs.rs/cel-build-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
downloader = { workspace = true, default-features = false, features = ["rustls-tls", "verify"] }
reqwest = { workspace = true, features = ["blocking"] }
regex = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }

[package.metadata.docs.rs]
targets = []
