[package]
name = "cel-build-utils"
description = "Build utils for google/cel-cpp"
categories = ["development-tools::build-utils"]
documentation = "https://docs.rs/cel-build-utils"
readme = "README.md"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
downloader = { workspace = true, default-features = false, features = ["rustls-tls", "verify"]  }
reqwest = { workspace = true, default-features = false, features = ["rustls-tls", "charset", "http2", "system-proxy", "blocking"] }
regex = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }

[package.metadata.docs.rs]
targets = []
