[package]
name = "cel-cxx-ffi"
description = "FFI bindings for the cel-cxx crate"
categories = ["api-bindings"]
documentation = "https://docs.rs/cel-cxx-ffi"
readme = "README.md"
version = "0.2.2"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true

[package.metadata.docs.rs]
targets = []

[features]
default = []

[dependencies]
cxx = { workspace = true }
dyn-clone = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

[build-dependencies]
cel-build-utils = { workspace = true }
cxx-build = { workspace = true }
glob = { workspace = true }
anyhow = { workspace = true }
