"""Bazel module definition for cel-cxx (Android platforms)."""
module(
    name = "cel-cxx-libcel-android",
)

# Core dependencies
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "platforms", version = "1.0.0")

# Android support
bazel_dep(name = "rules_android_ndk", version = "0.1.3")

# Configure Android NDK following official recommendations
android_ndk_repository_extension = use_extension("@rules_android_ndk//:extension.bzl", "android_ndk_repository_extension")
use_repo(android_ndk_repository_extension, "androidndk")

# Register Android NDK toolchains
register_toolchains("@androidndk//:all")

# CEL-CPP dependency
bazel_dep(name = "cel-cpp")
git_override(
    module_name = "cel-cpp",
    # We need some patches
    remote = "https://github.com/xjasonli/cel-cpp.git",
    commit = "5fa85ed85ea091e495fc494a173671ced18a7604",
)
