"""Bazel module definition for cel-cxx (Windows platforms)."""
module(
    name = "cel",
)

# Core dependencies
bazel_dep(name = "rules_cc", version = "0.1.2")
bazel_dep(name = "platforms", version = "1.0.0")

# CEL-CPP dependency
bazel_dep(name = "cel-cpp")
git_override(
    module_name = "cel-cpp",
    # We need some patches
    remote = "https://github.com/xjasonli/cel-cpp.git",
    commit = "3540ea522e12c06de4fbd44271a4c90c9c309b97",
)
